# solutions

./: README.md
c/c_programming_language/: .gitignore
c/c_programming_language/exercises/: meson.build
c/c_programming_language/exercises/chapter_1/: meson.build
c/c_programming_language/exercises/chapter_1/src/: ex_1_10.c  ex_1_11.c  ex_1_12.c  ex_1_13.c  ex_1_14.c  ex_1_3.c  ex_1_4.c  ex_1_6.c  ex_1_7.c  ex_1_8.c  ex_1_9.c
leetcode/: Cargo.toml
leetcode/easy/task_3/: Cargo.toml
lgr_bootcamp/: README.md
lgr_bootcamp/projects/: Cargo.toml
lgr_bootcamp/projects/project_1/: Cargo.toml
lgr_bootcamp/projects/project_2/: Cargo.toml
lgr_bootcamp/projects/project_3/: Cargo.toml
linkedin_learning/: README.md
linkedin_learning/RustEssentialTraining/: Cargo.toml
linkedin_learning/RustEssentialTraining/task_11_5/: Cargo.toml
linkedin_learning/RustEssentialTraining/task_12_7/: Cargo.toml
linkedin_learning/RustEssentialTraining/task_14_8/: Cargo.toml
linkedin_learning/RustEssentialTraining/task_5_8/: Cargo.toml
linkedin_learning/RustEssentialTraining/task_8_6/: Cargo.toml
linkedin_learning/RustEssentialTraining/task_9_4/: Cargo.toml  moonwalkers.txt
rust/algorythms/the_primegen/: Cargo.toml
rust/leetcode/: README.md
rust/linkedin_learning/RustEssentialTraining/: Cargo.toml
rust/rustbook/chapter_2/: Cargo.toml  main.rs
rust/rustbook/chapter_8/section_3/excercises/: Cargo.toml
rust/rustbook/chapter_8/section_3/excercises/src/solutions/: array_props.rs  employee_management.rs  mod.rs  pig_latin.rs  statistics.rs
(+38 files in other folders)
